description = 'kafka-connect-rest-source'

subprojects {
    ext {
        kafkaVersion = '2.1.0-cp1'
        confluentVersion = '5.1.0'
        jacksonVersion = '2.9.8'
    }

    apply plugin: 'java'
    apply plugin: 'java-library'

    group = 'org.radarcns'
    version = '0.2.1'

    sourceCompatibility = 1.8
    targetCompatibility = 1.8

    repositories {
        mavenCentral()
        maven { url "http://packages.confluent.io/maven/" }
        maven { url "http://repo.maven.apache.org/maven2" }
        jcenter()
        maven { url  'http://oss.jfrog.org/artifactory/oss-snapshot-local/' }
    }
}

wrapper {
    gradleVersion '4.10.2'
}

evaluationDependsOnChildren()

task downloadDependencies {
    subprojects.collect {
        it.configurations.runtimeClasspath.files
        it.configurations.compileClasspath.files
    }

    doLast {
        println 'Downloaded REST code dependencies'
    }
}
